2016-06-27  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl:
	  Unified handling of RAM bank properties.

2016-06-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/cfg-import.pl:
	  Changed types: unsigned short --> uint16_t

2016-06-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* build/mingw/do_setup.sh, build/mingw/make-mingw:
	  Enabled use the bzip2 source archive.

2016-05-26  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl:
	  Updated with new devices based on the mplabx-3.30.

2016-05-26  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl, tools/device-manager.pl:
	  Updated with new devices based on the mplabx-3.30.

2016-03-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Added the PIC12I subtype.

2016-02-28  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Updated based on the mplabx-3.25.

2016-02-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  The svn version got a link.

2016-01-17  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Updated based on the mplabx-3.20.

2016-01-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Fix a Microchip bug.

2016-01-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl, tools/device-manager.pl:
	  Added BANK_MAX value (for pic16(l)f18855, pic16(l)f18875).

2015-12-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/cfg-import.pl:
	  Fix the Microchip bug of the 18f47k40 and 18lf47k40 devices:
	  nDEBUG, nXINST

2015-12-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl, tools/device-manager.pl: